--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
   },
   "homepage": "https://github.com/Fix-22/5C_CecireCicoriaFalcone_VisiteSpecialistiche#readme",
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "body-parser": "^1.20.3",
+    "bootstrap": "^5.3.3",
+    "expres": "^0.0.5",
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.12.0",
+    "path": "^0.12.7"
   }
 }
